--- a/list-2-5.html
+++ b/list-2-5.html
@@ -346,23 +346,23 @@ document.body.addEventListener('input', POWERMODE);
 	<div class="class"><i class="fa fa-folder-open"></i><span style="padding-left: 10px;">继续教育</span><span style="padding-left: 10px;">共 59 篇</span></div>	    	 
       <div id="log-713" class="post_list">
 	  <a href="/b2/713.html"><h2 style="border-bottom: 1px dashed #e0e0e0;line-height: 1.5em;font-weight: bold;font-size: 20px;">（第二阶段 图片篇）2021年世行贷款村小、教学点教师全科教学能力提升培训</h2></a>      <div class="excerpt">
-	  	  <div class="textPost" data-url="/b2/713.html"><center><img src="/assets/file/2022/01/2021世行项目/图片/第二阶段/da/11.webp"   width="100%"    height="auto"></center></div>	  
+	  	  <div class="textPost" data-url="/b2/713.html"><center><img src="/assets2/file/2022/01/2021世行项目/图片/第二阶段/da/11.webp"   width="100%"    height="auto"></center></div>	  
 	  </div>	
 	  <div class="meta">
 	  <p class="time">2022-01-09 通过网页 
 	  	  	  	  </p>
-      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(1997) <a href="/b2/713.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
+      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(2002) <a href="/b2/713.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
 	 
 	</p></div></div> 
 	 
       <div id="log-712" class="post_list">
 	  <a href="/b2/712.html"><h2 style="border-bottom: 1px dashed #e0e0e0;line-height: 1.5em;font-weight: bold;font-size: 20px;">（第一阶段 图片篇）2021年世行贷款村小、教学点教师全科教学能力提升培训</h2></a>      <div class="excerpt">
-	  	  <div class="textPost" data-url="/b2/712.html"><center><img src="/assets/file/2022/01/2021世行项目/图片/第一阶段/da/36.webp"   width="100%"    height="auto"></center></div>	  
+	  	  <div class="textPost" data-url="/b2/712.html"><center><img src="/assets2/file/2022/01/2021世行项目/图片/第一阶段/da/36.webp"   width="100%"    height="auto"></center></div>	  
 	  </div>	
 	  <div class="meta">
 	  <p class="time">2022-01-09 通过网页 
 	  	  	  	  </p>
-      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(1709) <a href="/b2/712.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
+      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(1713) <a href="/b2/712.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
 	 
 	</p></div></div> 
 	 
@@ -373,18 +373,18 @@ document.body.addEventListener('input', POWERMODE);
 	  <div class="meta">
 	  <p class="time">2021-11-26 通过网页 
 	  	  	  	  </p>
-      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(2125) <a href="/b2/707.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
+      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(2128) <a href="/b2/707.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
 	 
 	</p></div></div> 
 	 
       <div id="log-706" class="post_list">
 	  <a href="/b2/706.html"><h2 style="border-bottom: 1px dashed #e0e0e0;line-height: 1.5em;font-weight: bold;font-size: 20px;">2021年世行贷款村小、教学点教师全科教学能力提升培训学时证明</h2></a>      <div class="excerpt">
-	  	  <div class="textPost" data-url="/b2/706.html"><img src="/assets/file/2021/09/网络研修/6班-林继.jpg" style="max-width:100%;"></div>	  
+	  	  <div class="textPost" data-url="/b2/706.html"><img src="/assets2/file/2021/09/网络研修/6班-林继.jpg" style="max-width:100%;"></div>	  
 	  </div>	
 	  <div class="meta">
 	  <p class="time">2021-09-16 通过网页 
 	  	  	  	  </p>
-      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(2613) <a href="/b2/706.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
+      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(2615) <a href="/b2/706.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
 	 
 	</p></div></div> 
 	 
@@ -395,18 +395,18 @@ document.body.addEventListener('input', POWERMODE);
 	  <div class="meta">
 	  <p class="time">2021-09-14 通过网页 
 	  	  	  	  </p>
-      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(2875) <a href="/b2/705.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
+      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(2878) <a href="/b2/705.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
 	 
 	</p></div></div> 
 	 
       <div id="log-698" class="post_list">
 	  <a href="/b2/698.html"><h2 style="border-bottom: 1px dashed #e0e0e0;line-height: 1.5em;font-weight: bold;font-size: 20px;">2021年公需课考试答案</h2></a>      <div class="excerpt">
-	  	  <div class="textPost" data-url="/b2/698.html"><center><img src="/assets/file/2021/06/2021061005.webp"   width="100%"    height="auto"></center></div>	  
+	  	  <div class="textPost" data-url="/b2/698.html"><center><img src="/assets2/file/2021/06/2021061005.webp"   width="100%"    height="auto"></center></div>	  
 	  </div>	
 	  <div class="meta">
 	  <p class="time">2021-07-30 通过网页 
 	  	  	  	  </p>
-      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(3546) <a href="/b2/698.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
+      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(3554) <a href="/b2/698.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
 	 
 	</p></div></div> 
 	 
@@ -424,18 +424,18 @@ document.body.addEventListener('input', POWERMODE);
 	  <div class="meta">
 	  <p class="time">2021-07-23 通过网页 
 	  	  	  	  </p>
-      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(2753) <a href="/b2/694.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
+      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(2762) <a href="/b2/694.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
 	 
 	</p></div></div> 
 	 
       <div id="log-668" class="post_list">
 	  <a href="/b2/668.html"><h2 style="border-bottom: 1px dashed #e0e0e0;line-height: 1.5em;font-weight: bold;font-size: 20px;">2021华医公需课</h2></a>      <div class="excerpt">
-	  	  <div class="textPost" data-url="/b2/668.html"><center><img src="/assets/file/2021/06/2021年公需课/2021062202.webp"   width="100%"    height="auto"></center></div>	  
+	  	  <div class="textPost" data-url="/b2/668.html"><center><img src="/assets2/file/2021/06/2021年公需课/2021062202.webp"   width="100%"    height="auto"></center></div>	  
 	  </div>	
 	  <div class="meta">
 	  <p class="time">2021-06-22 通过网页 
 	  	  	  	  </p>
-      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(2544) <a href="/b2/668.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
+      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(2548) <a href="/b2/668.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
 	 
 	</p></div></div> 
 	 
@@ -452,7 +452,7 @@ document.body.addEventListener('input', POWERMODE);
 	  <div class="meta">
 	  <p class="time">2021-06-19 通过网页 
 	  	  	  	  </p>
-      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(8872) <a href="/b2/666.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
+      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(8876) <a href="/b2/666.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
 	 
 	</p></div></div> 
 	 
@@ -466,7 +466,7 @@ document.body.addEventListener('input', POWERMODE);
 	  <div class="meta">
 	  <p class="time">2021-06-04 通过网页 
 	  	  	  	  </p>
-      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(3751) <a href="/b2/663.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
+      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(3758) <a href="/b2/663.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
 	 
 	</p></div></div> 
 	<div class="pagination">
